--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "primeicons": "^5.0.0",
-    "primevue": "^3.15.0"
+    "primevue": "^3.15.0",
+    "swiper": "^8.3.1"
   }
 }
