--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.7",
-    "nuxt": "3.0.0-rc.4",
+    "nuxt": "^3.0.0-rc.8",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
   },
