--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.7",
-    "nuxt": "^3.0.0-rc.8",
+    "nuxt": "^3.0.0-rc.11",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
   },
   "dependencies": {
+    "defu": "^6.1.0",
     "primeicons": "^5.0.0",
     "primevue": "^3.15.0",
     "swiper": "^8.3.1"
