--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
+    "@types/leaflet": "^1.8.0",
     "autoprefixer": "^10.4.7",
     "nuxt": "^3.0.0-rc.11",
     "postcss": "^8.4.14",
