--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "defu": "^6.1.0",
+    "firebase": "^9.12.1",
+    "firebase-admin": "^11.2.0",
     "leaflet": "^1.9.2",
     "primeicons": "^5.0.0",
     "primevue": "^3.15.0",
